Minor update to cert list

--- a/ProfileMatch.Components/User/Dialogs/UserCertDialog.razor
+++ b/ProfileMatch.Components/User/Dialogs/UserCertDialog.razor
@@ -7,12 +7,12 @@
                           <MudTextField T="string" @bind-Value="@TempDescriptionPl" Label=@L["Certificate Description PL"] Required="true" RequiredError=@L["Certificate description is required!"] Counter="20"        MaxLength="20" HelperText=@L["Max length"]  Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))"/>
 <MudDatePicker Label=@L["Date of Issue"] @bind-Date="TempDate" DateFormat="dd/MM/yyyy" />
 <MudDatePicker Label=@L["Date Valid To"] @bind-Date="TempValidTo" Editable="true" DateFormat="dd/MM/yyyy" />
-<MudTextField Placeholder="@L["Certificate URL"]" T="string"/>
+
             <InputFile id="fileInput" OnChange="UploadImage" hidden />
             <MudButton HtmlTag="label" Variant="Variant.Outlined"
                     Color="Color.Primary"
                     StartIcon="@Icons.Filled.AttachFile" 
-                    for="fileInput">@L["Upload Image"]</MudButton>
+                    for="fileInput">@L["Upload File"]</MudButton>
         </MudForm>
     </DialogContent>
     <DialogActions>
