--- a/ProfileMatch.Components/User/UserCertList.razor
+++ b/ProfileMatch.Components/User/UserCertList.razor
@@ -31,21 +31,18 @@
         {
             <Column T="Certificate" Field="DescriptionPl" Title=@L["Description"] />
         }
-        <Column T="Certificate" Field="Image" Sortable="false" Title=@L["Image"]>
+        <Column T="Certificate" Field="Image" Sortable="false" Title=@L["Attachment"]>
             <CellTemplate>
+               
                 <div class="cert">
-             
-                   <iframe src ="@context.Image" style= "width:100%;height:1200px;" ></iframe>
-                
-                    
+                 
+                    <a href="@context.Image" target="_blank" ><MudIcon Icon="@Icons.Filled.FilePresent" Size="Size.Medium" /></a>
+               
+               
                 </div>
             </CellTemplate>
         </Column>
-        <Column T="Certificate" Field="Url" Title="Url">
-            <CellTemplate>
-                <a href="@context.Url" name="@context.Name"/>
-            </CellTemplate>
-        </Column>
+       
         <Column T="Certificate" Field="DateCreated" Title=@L["Date of Issue"] />
         <Column T="Certificate" Field="ValidToDate" Title="@L["Valid To Date"]" />
         <Column T="Certificate" Sortable="false" Title=@L["Edit"]>
