--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/ConfirmEmailError.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/ConfirmEmailError.cshtml
@@ -1,14 +1,13 @@
 ﻿@page
-@model ConfirmEmailModel
+@model ConfirmEmailErrorModel
 @{
-    ViewData["Title"] = @L["Confirmed email"];
+    ViewData["Title"] = @L["Email confirmation error"];
 }
 
 <h1>@ViewData["Title"]</h1>
-<h4>@L["Thank you for confirming your email."]</h4>
+<h4>@L["Sorry, there was an error verifying your email."]</h4>
 <hr />
 <div>
     <a class="btn btn-primary" href="/Identity/Account/Login" role="button">@L["Back to login page"]</a>
 
 </div>
-
