--- a/ProfileMatch.Components/Admin/Dialogs/AdminDepartmentDialog.razor
+++ b/ProfileMatch.Components/Admin/Dialogs/AdminDepartmentDialog.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <DialogContent>
-        <MudForm @ref="Form">
+        <MudForm @ref="_form">
             <MudTextField T="string" @bind-Value="@TempName" Immediate="true" Label=@L["Department Name EN"] Required="true" RequiredError=@L["Department name is required!"] />
             <MudTextField T="string" @bind-Value="@TempNamePl" Immediate="true" Label=@L["Department Name PL"] Required="true" RequiredError=@L["Department name is required!"] />
             <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label=@L["Department Description EN"] Lines="5" />
