--- a/ProfileMatch.Components/Admin/Dialogs/AdminJobTitleDialog.razor
+++ b/ProfileMatch.Components/Admin/Dialogs/AdminJobTitleDialog.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <DialogContent>
-        <MudForm @ref="Form">
+        <MudForm @ref="_form">
             <MudTextField T="string" @bind-Value="@TempName" Label=@L["Job Title Name EN"] Required="true" RequiredError=@L["JobTitle name is required!"] Counter="20"        MaxLength="20" HelperText=@L["Max length"]  Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))"/>
             <MudTextField T="string" @bind-Value="@TempNamePl" Label=@L["Job Title Name PL"] Required="true" RequiredError=@L["JobTitle name is required!"] Counter="20"        MaxLength="20" HelperText=@L["Max length"]  Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))"/>
             <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label=@L["Job Title Description EN"] Lines="5" />
