--- a/ProfileMatch.Components/User/UserAccount.razor
+++ b/ProfileMatch.Components/User/UserAccount.razor
@@ -28,7 +28,7 @@
         <UserCategoryList CurrentUser="CurrentUser" />
 
 
-        @foreach (var un in UserOpenAnswersVM)
+        @foreach (var un in _userOpenAnswersVM)
         {
             <MudItem Class="pa-2" sm="6" xs="12" md="6">
                 <MudCard>
