--- a/ProfileMatch.Components/Culture/CultureSelector.razor
+++ b/ProfileMatch.Components/Culture/CultureSelector.razor
@@ -1,4 +1,4 @@
-﻿<MudMenu Icon="@Icons.Material.Outlined.Translate" Color="Color.Inherit" Direction="Direction.Bottom" OffsetY="true" Dense="true">
+﻿<MudMenu Icon="@Icons.Material.Outlined.Translate" Color="Color.Default" Direction="Direction.Bottom" OffsetY="true" Dense="true">
     <MudMenuItem OnClick="@(() => SelectCulture("pl-PL"))"><img src="https://upload.wikimedia.org/wikipedia/commons/1/12/Flag_of_Poland.svg" height="17" /> Polski</MudMenuItem>
     <MudMenuItem OnClick="@(() => SelectCulture("en-US"))"><img src="https://upload.wikimedia.org/wikipedia/en/a/a4/Flag_of_the_United_States.svg" height="14" /> English</MudMenuItem>
 </MudMenu>
