--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -11,7 +11,7 @@
         <AuthorizeView>
             
                     <MudHidden Breakpoint="Breakpoint.MdAndUp">
-                        <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" /></MudHidden>
+                        <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Default" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" /></MudHidden>
                             </AuthorizeView>
                     <MudHidden Breakpoint="Breakpoint.Xs">
                         @if (_isDarkTheme)
@@ -38,7 +38,7 @@
                         }
                         else
                         {
-                             <MudIconButton Class="darkSwitch" OnClick="@(()=>ChangeTheme())" Icon="@Icons.Outlined.Nightlight" Color="Color.Inherit"/>
+                             <MudIconButton Class="darkSwitch" OnClick="@(()=>ChangeTheme())" Icon="@Icons.Outlined.Nightlight" Color="Color.Default"/>
                         }
                         <AuthorizeView>
                     <MudMenu Direction="Direction.Left" OffsetX="true" Dense="true" Class="mt-1 ml-4">
@@ -72,7 +72,7 @@
                 <MudMainContent>
                     <MudHidden Breakpoint="Breakpoint.SmAndDown">
                         <MudToolBar DisableGutters="true">
-                            <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" OnClick="@((e) => DrawerToggle())" Class="ml-3" />
+                            <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Default" OnClick="@((e) => DrawerToggle())" Class="ml-3" />
                             <MudSpacer />
                             @if (NavigationManager.Uri.Contains("/user/")&&!NavigationManager.Uri.Contains("/user/dashboard"))
                             {
